<resources>
    <string name="app_name">itProgerApp</string>
    <string name="calculator_logo">Calculator</string>
    <string name="hint_1">Enter your first number</string>
    <string name="hint_2">Enter your second number</string>
    <string name="calculate_button">Calculate</string>
    <string name="next_page_button">Next page</string>
    <string name="go_back">Go back</string>
    <string name="rating_bar_is_here">Rating bar is here</string>
    <string name="fragment_2">Fragment 2</string>
    <string name="fragment_1">Fragment 1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>