<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator_logo"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <EditText
        android:id="@+id/hint_text_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="11"
        android:layout_margin="20dp"
        android:inputType="numberDecimal"
        android:textStyle="bold"
        android:textColorHint="@color/semi_red"
        android:hint="@string/hint_1"
        app:layout_constraintTop_toBottomOf="@id/calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="137dp" />

    <EditText
        android:id="@+id/hint_text_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:ems="11"
        android:hint="@string/hint_2"
        android:inputType="numberDecimal"
        android:textColorHint="@color/semi_red"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hint_text_first" />

    <RatingBar
        android:id="@+id/ratingBar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/rating_bar_is_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint_text_second" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="397dp"
        android:layout_height="271dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar2"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <Button
                android:id="@+id/button_calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:backgroundTint="#FF0303"
                android:text="@string/calculate_button"
                app:cornerRadius="12dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp">

            <Button
                android:id="@+id/button_next_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/semi_red"
                android:text="@string/next_page_button"
                app:cornerRadius="12dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp">

            <Button
                android:id="@+id/fragment_first_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/yellow"
                android:text="@string/fragment_1"
                app:cornerRadius="12dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <Button
                android:id="@+id/fragment_second_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:text="@string/fragment_2"
                app:cornerRadius="12dp" />
        </TableRow>
    </TableLayout>

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="414dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar2">

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>